# sdl2-pong

./: CMakeLists.txt  README.md  common.hpp  main.cpp
elements/: Counter.cpp  Counter.hpp  Label.cpp  Label.hpp
entities/: Ball.cpp  Ball.hpp  Paddle.cpp  Paddle.hpp
game/: Game.cpp  Game.hpp  Player.cpp  Player.hpp
geometry/: Vec2.cpp  Vec2.hpp
utils/: LogUtils.cpp  LogUtils.hpp  RendererUtils.cpp  RendererUtils.hpp  Vec2.hpp  WindowUtils.cpp  WindowUtils.hpp
